footer overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -85,9 +85,9 @@ a:hover {
 
 #contact {
   text-align: center;
-  width: 400px;
+   max-width: 400px;
   margin: 0 auto;
-  padding: 4rem 0;
+  padding: 4rem 2rem;
 }
 
 .section-plum {
@@ -207,6 +207,9 @@ footer p {
   font-size: 1rem;
 }
 
+.footer-header {
+  padding: 0 2rem;
+}
 /* project */
 
 .img {
@@ -322,5 +325,11 @@ article ul {
 
   #projects .reversed ul {
     justify-content: flex-start;
+  }
+}
+
+@media (max-width: 500px){
+  .contact-header p{
+    max-width: 39px;
   }
 }
